--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,17 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.7.9",
+    "framer-motion": "^12.5.0",
+    "imagekit": "^6.0.0",
     "imagekitio-react": "^4.2.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "rsuite": "^5.78.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.13",
     "zustand": "^5.0.3"
   },
@@ -27,6 +32,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "daisyui": "^5.0.6",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
