--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": "18.x",
+    "pnpm": ">=8"
+  },
   "author": "Lochan",
   "license": "ISC",
   "description": "",
